# test_mail

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  generate_test_xlsx.py  pyproject.toml
import_data/: data.xlsx
src/apps/mails/: admin.py  apps.py  models.py  services.py  tests.py
src/apps/mails/management/commands/: import_mailings.py  import_xlsx.py  run_mailing.py
src/apps/mails/migrations/: 0001_initial.py  0002_alter_mailing_options_mailing_retry_count.py
src/core/: models.py  settings.py
